--- a/html/country.html
+++ b/html/country.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
-
 
     <title>Mezy</title>
 </head>
@@ -20,12 +20,12 @@
             </v-card>
 
             <v-container>
-                 <areazone></areazone>
+                <countryzone></countryzone>
             </v-container>
             <br/>
             <br/>
             <div class="text-center">
-                <v-btn x-large color="primary" href="country.html">NEXT</v-btn>
+                <v-btn x-large color="primary">NEXT</v-btn>
             </div>
 
         </v-app>
@@ -33,8 +33,9 @@
 
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
-    <script src="../js/area.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+<script src="../js/country.js"></script>
+
 </body>
 </html>
