Added Missing files

--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Vuetify Parallax Starter</title>
+  <title>Mezy</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900' rel="stylesheet">
@@ -16,16 +16,16 @@
     </v-toolbar>
     <v-content>
       <section>
-        <v-parallax id="content" src="assets/wallpaper2.jpg" height="600">
+        <v-parallax id="content" src="../src/plane1.jpg" height="600">
           <v-layout
             column
             align-center
             justify-center
             class="white--text"
           >
-            
+
             <h1 class="white--text mb-2 display-1 text-center">Want to <b>Study Abroad?</b></h1>
-      
+
             <v-btn
               class="mt-12"
               color="blue lighten-2"
@@ -106,7 +106,7 @@
       </section>
 
       <section>
-        <v-parallax src="assets/section.jpg" height="380">
+        <v-parallax src="../src/section.jpg" height="380">
           <v-layout column align-center justify-center>
             <div class="headline white--text mb-4 text-center">Studying abroad has never been easier</div>
             <em>Start your application today</em>
