--- a/html/login.html
+++ b/html/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="title">
-    <p>&nbsp &nbsp &nbsp<b>UC</b>3000</p>
+    <p>&nbsp &nbsp &nbsp<b>MEZY</b></p>
 </div>
 <div class="loginbox">
     <img src="../src/avatar.png" class="avatar">
