--- a/html/area.html
+++ b/html/area.html
@@ -35,6 +35,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+    <script src="../js/toolbar.js"></script>
     <script src="../js/area.js"></script>
+
 </body>
 </html>
