--- a/html/index.html
+++ b/html/index.html
@@ -30,6 +30,7 @@
  </div>
  <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+ <script src="../js/toolbar.js"></script>
  <script src="../js/index.js"></script>
 </body>
 </html>
