--- a/src/html/login.html
+++ b/src/html/login.html
@@ -10,7 +10,7 @@
     <p>&nbsp &nbsp &nbsp<b>MEZY</b></p>
 </div>
 <div class="loginbox">
-    <img src="../src/avatar.png" class="avatar">
+    <img src="../../assets/avatar.png" class="avatar">
     <h1>Login</h1>
     <form action="index.html">
         <p>Username</p>
