arregle las imagenes

--- a/src/html/login.html
+++ b/src/html/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="../css/login.css">
+    <link rel="stylesheet" type="text/css" href="../../css/login.css">
     <meta charset="UTF-8">
     <title>Welcome</title>
 </head>
@@ -10,7 +10,7 @@
     <p>&nbsp &nbsp &nbsp<b>MEZY</b></p>
 </div>
 <div class="loginbox">
-    <img src="../src/avatar.png" class="avatar">
+    <img src="../../assets/avatar.png" class="avatar">
     <h1>Login</h1>
     <form action="index.html">
         <p>Username</p>
