arregle las imagenes COLOOOO ahora si

--- a/src/public/html/login.html
+++ b/src/public/html/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="../../css/login.css">
+    <link rel="stylesheet" type="text/css" href="../css/login.css">
     <meta charset="UTF-8">
     <title>Welcome</title>
 </head>
@@ -10,9 +10,9 @@
     <p>&nbsp &nbsp &nbsp<b>MEZY</b></p>
 </div>
 <div class="loginbox">
-    <img src="../../assets/avatar.png" class="avatar">
+    <img src="../assets/avatar.png" class="avatar">
     <h1>Login</h1>
-    <form action="index.html">
+    <form action="../index.html">
         <p>Username</p>
         <input type="text" name="" placeholder="Enter Username">
         <p>Password</p>
