cree la pantalla de university para china harcodeada

--- a/src/public/html/university.html
+++ b/src/public/html/university.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
+    <link rel="stylesheet" type="text/css" href="../css/university.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
@@ -20,12 +20,12 @@
             </v-card>
 
             <v-container>
-                <countryzone></countryzone>
+                <university></university>
             </v-container>
             <br/>
             <br/>
             <div class="text-center">
-                <v-btn x-large color="primary" href="university.html">NEXT</v-btn>
+                <v-btn x-large color="primary">NEXT</v-btn>
             </div>
 
         </v-app>
@@ -36,7 +36,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
     <script src="../js/toolbar.js"></script>
-    <script src="../js/country.js"></script>
+    <script src="../js/university.js"></script>
 
 </body>
 </html>
