--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Mezy</title>
   <meta charset="utf-8">
@@ -8,29 +9,39 @@
   <link href="https://cdn.jsdelivr.net/npm/@mdi/font@3.x/css/materialdesignicons.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
 </head>
+
 <body>
   <div id="app">
-   <v-app light>
+    <v-app light>
 
-     <toolbar></toolbar> 
+      <toolbar></toolbar>
 
-    <v-content>   
+      <v-content>
+          
+        <!-- Airplane image -->
+        <parallax1></parallax1>
 
-     <parallax1></parallax1>
+        <!-- Middle info -->
+        <topunivs></topunivs>
+        <howitworks></howitworks>
 
-     <howitworks></howitworks>
+        <!-- Sunset Image -->
+        <parallax2></parallax2>
 
-     <parallax2></parallax2>
+        <!--News-->
+        <news></news>
 
-     <aboutcontact></aboutcontact>
+        <aboutcontact></aboutcontact>
 
-    </v-content>
+      </v-content>
 
     </v-app>
- </div>
- <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
- <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
- <script src="js/toolbar.js"></script>
- <script src="js/index.js"></script>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+  <script src="js/toolbar.js"></script>
+  <script src="js/index.js"></script>
+  
 </body>
+
 </html>
