--- a/src/public/html/country.html
+++ b/src/public/html/country.html
@@ -20,7 +20,7 @@
             </v-card>
 
             <v-container>
-                <countryzone></countryzone>
+                <selector></selector>
             </v-container>
             <br/>
             <br/>
