--- a/src/public/html/area.html
+++ b/src/public/html/area.html
@@ -20,7 +20,7 @@
             </v-card>
 
             <v-container>
-                 <areazone></areazone>
+                 <selector></selector>
             </v-container>
             <br/>
             <br/>
