--- a/src/public/html/country.html
+++ b/src/public/html/country.html
@@ -36,7 +36,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
     <script src="../js/toolbar.js"></script>
-    <script src="../js/components.js"></script>
+    <script src="../js/index.js"></script>
 
 </body>
 </html>
