--- a/src/public/index.html
+++ b/src/public/index.html
@@ -22,7 +22,7 @@
         <parallax1></parallax1>
 
         <!-- Middle info -->
-        <topunivs></topunivs>
+        <!-- <topunivs></topunivs> -->
         <howitworks></howitworks>
 
         <!-- Sunset Image -->
