--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,6 +8,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900' rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/@mdi/font@3.x/css/materialdesignicons.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+  <link rel = "stylesheet" type = "text/css" href = "/src/public/css/university.css" />
 </head>
 
 <body>
